Update swagger and Add cocktail
